Fixed the check not showing on phone

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -51,7 +51,7 @@ page-home {
         repeat: no-repeat;
         position: center;
         size: contain;
-        image:url("assets/avatar/false.png");
+        image:url("../assets/avatar/false.png");
        }
     }}
 
@@ -79,7 +79,7 @@ page-home {
       repeat: no-repeat;
       position: right;
       size: 50px;
-      image:url("./assets/avatar/emoji.png");
+      image:url("../assets/avatar/emoji.png");
     }
   }
 
